--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "cross-env PORT=6969 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,9 +43,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
-    "@types/rewire": "^2.5.28",
     "jest": "^29.3.1",
-    "rewire": "^6.0.0",
     "ts-jest": "^29.0.3"
   }
 }
