--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ name: Node CI
 
 on:
   push:
-    branches: [$default-branch]
+    branches:
+      - main
   pull_request:
-    branches: [$default-branch]
+    branches:
+      - main
 
 jobs:
   build:
