--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "@types/react-router-dom": "^5.3.3",
     "jest": "^29.3.1",
+    "react-router-dom": "^6.5.0",
     "ts-jest": "^29.0.3"
   }
 }
