--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "cross-env": "^7.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-markdown": "^8.0.4",
         "react-scripts": "5.0.1",
         "sass": "^1.55.0",
         "ts-node": "^10.9.1",
