--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/node": "^16.11.68",
         "@types/react": "^18.0.21",
@@ -43,9 +42,13 @@
         ]
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
+        "@testing-library/react": "^13.4.0",
         "@types/jest": "^29.2.2",
         "@types/react-router-dom": "^5.3.3",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
         "react-router-dom": "^6.5.0",
         "ts-jest": "^29.0.3"
     }
