--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm test
+            - run: cd src/web npm ci
+            - run: cd src/web npm run build --if-present
+            - run: cd src/web npm test
