--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     push:
         branches:
             - main
+            - ci
     pull_request:
         branches:
             - main
@@ -21,7 +22,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - name: Use Node.js ${{ matrix.node-version }}
-              working-directory: ./src/web
+              working-directory: src/web
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
