--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     push:
         branches:
             - main
+            - ci
     pull_request:
         branches:
             - main
@@ -18,14 +19,19 @@ jobs:
             matrix:
                 node-version: [16.x, 18.x]
 
+        defaults:
+            run:
+                working-directory: ./src/web
+
         steps:
             - uses: actions/checkout@v3
             - name: Use Node.js ${{ matrix.node-version }}
-              working-directory: ./src/web
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm test
+                  cache-dependency-path: ./src/web/package-lock.json
+            - run: |
+                  npm ci
+                  npm run build --if-present
+                  npm test
