--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,9 +4,8 @@
   "description": "The backend for buddy.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon dist/index.js",
-    "watch": "tsc -w",
-    "start": "tsc && node dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
     "test": "jest",
     "migrate:gen": "typeorm-ts-node-commonjs migration:generate src/migrations/refactor -d src/data-source.ts",
     "migrate:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts"
@@ -22,8 +21,10 @@
   },
   "homepage": "https://github.com/samkaj/buddy#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
@@ -31,6 +32,10 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0"
   }
 }
