--- a/src/server/package.json
+++ b/src/server/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/samkaj/buddy#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0"
