--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "ts-node src/index.ts",
-    "test": "jest",
+    "test": "NODE_ENV=test mocha --require ts-node/register --require source-map-support/register 'src/**/*.test.ts'",
     "migrate:gen": "typeorm-ts-node-commonjs migration:generate src/migrations/refactor -d src/data-source.ts",
     "migrate:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts"
   },
@@ -21,11 +21,15 @@
   },
   "homepage": "https://github.com/samkaj/buddy#readme",
   "dependencies": {
+    "@types/express-session": "^1.17.5",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
+    "ioredis": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -35,10 +39,18 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/connect-redis": "^0.0.19",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
+    "@types/sinon": "^10.0.13",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
+    "sinon": "^15.0.1",
     "ts-node-dev": "^2.0.0"
   }
 }
